--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/CustomTenantManagement.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/CustomTenantManagement.razor
@@ -244,6 +244,10 @@
                             <TextEdit @bind-Text="@TenantContactEmail"></TextEdit>
                         </Field>
                         <Field>
+                            <FieldLabel>@_L["Domain"]</FieldLabel>
+                            <TextEdit @bind-Text="@Domain"></TextEdit>
+                        </Field>
+                        <Field>
                             <FieldLabel>@_L["ShareProfit%"]</FieldLabel>
                             <NumericEdit @bind-Value="@ShareProfitPercentage" />
                         </Field>
@@ -456,6 +460,10 @@
                         <Field>
                             <FieldLabel>@_L["TenantContactEmail"]</FieldLabel>
                             <TextEdit @bind-Text="@TenantContactEmail"></TextEdit>
+                        </Field>
+                        <Field>
+                            <FieldLabel>@_L["Domain"]</FieldLabel>
+                            <TextEdit @bind-Text="@Domain"></TextEdit>
                         </Field>
                         <Field>
                             <FieldLabel>@_L["ShareProfit%"]</FieldLabel>
