--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditGetSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditGetSetting.razor
@@ -7,11 +7,14 @@
 @using Kooco.Pikachu.GroupBuys
 @using Kooco.Pikachu.Items
 @using Kooco.Pikachu.Permissions
+@using Kooco.Pikachu.ShoppingCredits
 @using Microsoft.Extensions.Localization
+@using Volo.Abp.AspNetCore.Components.Web
 
 @inherits PikachuComponentBase
+@inject AbpBlazorMessageLocalizerHelper<PikachuResource> LH
 @inject GroupBuyAppService GroupBuyAppService
-
+@inject IShoppingCreditEarnSettingAppService ShoppingCreditEarnSettingAppService
 @inject NavigationManager NavigationManager
 <Div>
     <Row>
@@ -21,6 +24,8 @@
 
     </Row>
 </Div>
+<Form >
+    <Validations  @ref="@ValidationsRef" Model="@CreateUpdateEarn" ValidateOnLoad="false">
 <Card>
     <CardBody>
         <Row VerticalGutter="10">
@@ -28,23 +33,40 @@
                 <h4 class="text-dark">@L["RegistrationBounsPoint"]</h4>
             </Column>
             <Column ColumnSize="ColumnSize.Is9">
-
+                  <Validation MessageLocalizer="@LH.Localize">
                 <Column ColumnSize="ColumnSize.Is12">
-                    <Switch TValue="bool" Checked="true" />
+                    <Switch @bind-Checked="CreateUpdateEarn.RegistrationBonusEnabled" TValue="bool"  >
+                    <Feedback>
+                        <ValidationError/>
+                    </Feedback>    
+                    </Switch>
 
                 </Column>
+                </Validation>
                 <Column ColumnSize="ColumnSize.Is12">
+                    <Validation MessageLocalizer="@LH.Localize">
                     <Label>@L["EarnedPoints"]</Label>
-                    <NumericEdit TValue="int" />
+                    <NumericEdit @bind-Value="CreateUpdateEarn.RegistrationEarnedPoints" TValue="int" >
+                    <Feedback>
+                        <ValidationError/>
+                    </Feedback>    
+                    </NumericEdit>
+                    </Validation>
 
                 </Column>
                 <Column ColumnSize="ColumnSize.Is12">
+                    <Validation MessageLocalizer="@LH.Localize">
                     <Label>@L["UsagePeriod"]</Label>
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="UsagePeriod">
+                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" @bind-CheckedValue="CreateUpdateEarn.RegistrationUsagePeriodType" Name="RegistrationUsagePeriod">
+                       <ChildContent>
                         <Radio Value="@("NoExpiry")">@L["NoExpiry"]</Radio>
-                        <Radio Value="@("Limited")">@L["Limited,validfordays"]</Radio><NumericEdit TValue="int" />
+                        <Radio Value="@("Limited")">@L["Limited,validfordays"]</Radio><NumericEdit  @bind-Value="CreateUpdateEarn.RegistrationValidDays" TValue="int" />
+                   </ChildContent>
+                   <Feedback>
+                       <ValidationError/>
+                   </Feedback>
                     </RadioGroup>
-
+                    </Validation>
                 </Column>
             </Column>
            
@@ -59,23 +81,39 @@
                 <h4 class="text-dark">@L["BirthdayBounsPoint"]</h4>
             </Column>
             <Column ColumnSize="ColumnSize.Is9">
-
+                <Validation MessageLocalizer="@LH.Localize">
                 <Column ColumnSize="ColumnSize.Is12">
-                    <Switch TValue="bool" Checked="true" />
+                    <Switch TValue="bool" @bind-Checked="CreateUpdateEarn.BirthdayBonusEnabled">
+                        <Feedback>
+                            <ValidationError/>
+                        </Feedback>
+                    </Switch>
 
                 </Column>
+                </Validation>
                 <Column ColumnSize="ColumnSize.Is12">
+                    <Validation MessageLocalizer="@LH.Localize">
                     <Label>@L["EarnedPoints"]</Label>
-                    <NumericEdit TValue="int" />
-
+                    <NumericEdit @bind-Value="CreateUpdateEarn.BirthdayEarnedPoints" TValue="int" >
+                    <Feedback>
+                        <ValidationError/>
+                    </Feedback>    
+                    </NumericEdit>
+                    </Validation>
                 </Column>
                 <Column ColumnSize="ColumnSize.Is12">
+                    <Validation MessageLocalizer="@LH.Localize">
                     <Label>@L["UsagePeriod"]</Label>
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="UsagePeriod">
+                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" @bind-CheckedValue="CreateUpdateEarn.BirthdayUsagePeriodType" Name="BirthdayUsagePeriod">
+                       <ChildContent>
                         <Radio Value="@("NoExpiry")">@L["NoExpiry"]</Radio>
-                        <Radio Value="@("Limited")">@L["Limited,validfordays"]</Radio><NumericEdit TValue="int"/>
+                        <Radio Value="@("Limited")">@L["Limited,validfordays"]</Radio><NumericEdit @bind-Value="CreateUpdateEarn.BirthdayValidDays" TValue="int"/>
+                    </ChildContent>
+                    <Feedback>
+                        <ValidationError/>
+                    </Feedback>
                     </RadioGroup>
-
+                    </Validation>
                 </Column>
             </Column>
 
@@ -91,25 +129,42 @@
             </Column>
             <Column ColumnSize="ColumnSize.Is9">
                 <Column ColumnSize="ColumnSize.Is12">
+                    <Validation MessageLocalizer="@LH.Localize">
                     <Column ColumnSize="ColumnSize.Is12">
-                        <Switch TValue="bool" Checked="true" />
+                        <Switch TValue="bool" @bind-Checked="CreateUpdateEarn.CashbackEnabled" >
+                            <Feedback>
+                                <ValidationError/>
+                            </Feedback>
+                            </Switch>
 
                     </Column>
-                  
+                  </Validation>
                     <Column ColumnSize="ColumnSize.Is12">
+                        <Validation MessageLocalizer="@LH.Localize">
                         <Label>@L["UsagePeriod"]</Label>
-                        <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="UsagePeriod">
+                        <RadioGroup Orientation="Orientation.Vertical" TValue="string" @bind-CheckedValue="CreateUpdateEarn.CashbackUsagePeriodType" Name="CashBackUsagePeriod">
+                           <ChildContent>
                             <Radio Value="@("NoExpiry")">@L["NoExpiry"]</Radio>
-                            <Radio Value="@("Limited")">@L["Limited,validfordays"]</Radio><NumericEdit TValue="int" />
+                            <Radio Value="@("Limited")">@L["Limited,validfordays"]</Radio><NumericEdit @bind-Value="CreateUpdateEarn.CashbackValidDays" TValue="int" />
+                       </ChildContent>
+                       <Feedback>
+                       <ValidationError/>
+                       </Feedback>
                         </RadioGroup>
-
+                        </Validation>
                     </Column>
+                    <Validation MessageLocalizer="@LH.Localize">
                     <Label>@L["CalculationMethod"]</Label>
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="DeductionMethod">
-                        <Radio Value="@("UnifiedCalculation")">@L["UnifiedCalculation:"]<NumericEdit Max="100" TValue="int" />%</Radio>
+                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" @bind-CheckedValue="CreateUpdateEarn.CashbackCalculationMethod" Name="DeductionMethod">
+                        <ChildContent>
+                        <Radio Value="@("UnifiedCalculation")">@L["UnifiedCalculation:"]<NumericEdit @bind-Value="CreateUpdateEarn.CashbackUnifiedMaxDeductiblePoints" Max="100" TValue="int" />%</Radio>
                         <Radio Value="@("StagedCalculation")">@L["StagedCalculation"]</Radio>
+                    </ChildContent>
+                    <Feedback>
+                        <ValidationError/>
+                    </Feedback>
                     </RadioGroup>
-
+                    </Validation>
                 </Column>
                 <Column ColumnSize="ColumnSize.Is12">
                     <Row>
@@ -117,76 +172,102 @@
                             <Label>@L["StageSettings"]</Label>
                         </Column>
                         <Column Class="text-end" ColumnSize="ColumnSize.Is6">
-                            <Button><Icon Name="IconName.Add"></Icon></Button>
+                            <Button Clicked="AddNewRow"><Icon Name="IconName.Add"></Icon></Button>
                         </Column>
-                        <Column ColumnSize="ColumnSize.Is6">
-                            <Label>@L["Spend"]</Label>
-                            <NumericEdit TValue="int" />
-                        </Column>
-                        <Column ColumnSize="ColumnSize.Is6">
-                            <Label>@L["ToReceivePoints"]</Label>
-                            <NumericEdit TValue="int" />
-                        </Column>
+                                @foreach (var setting in stagedSettings)
+                                {
+                                    <Column ColumnSize="ColumnSize.Is6">
+                                        <Label>@L["Spend"]</Label>
+                                        <NumericEdit @bind-Value="setting.Spend" TValue="int" />
+                                    </Column>
+                                    <Column ColumnSize="ColumnSize.Is6">
+                                        <Label>@L["ToReceivePoints"]</Label>
+                                        <NumericEdit @bind-Value="setting.Points" TValue="int" />
+                                    </Column>
+                                }
                     </Row>
                 </Column>
                 <Column ColumnSize="ColumnSize.Is12">
+                    <Validation MessageLocalizer="@LH.Localize">
                     <Label>@L["ApplicableItems"]</Label>
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="ApplicableItems">
-                        <Radio Value="@("AddOnProducts")">@L["Add-OnProducts:"]<NumericEdit TValue="int" /></Radio>
+                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" @bind-CheckedValue="CreateUpdateEarn.CashbackApplicableItems" Name="ApplicableItems">
+                        <ChildContent>
+                        <Radio Value="@("AddOnProducts")">@L["Add-OnProducts"]</Radio>
                         <Radio Value="@("ShippingFees")">@L["ShippingFees"]</Radio>
+                   </ChildContent>
+                   <Feedback>
+                       <ValidationError/>
+                   </Feedback>
                     </RadioGroup>
-
+                    </Validation>
                 </Column>
                 <Column ColumnSize="ColumnSize.Is12">
-                    <Label>@L["ApplicableforGroupbuying"]</Label>
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="Groupbuys">
+                    <Validation MessageLocalizer="@LH.Localize">
+                        <Label>@L["ApplicableforGroupbuying"]</Label>
+                    <RadioGroup Orientation="Orientation.Vertical"  @bind-CheckedValue="CreateUpdateEarn.CashbackApplicableGroupbuys" TValue="string" Name="Groupbuys">
+                        <ChildContent >
                         <Radio Value="@("AllGroupbuys")">@L["AllGroupbuys"]</Radio>
                         <Radio Value="@("SpecificGroupbuys")">@L["SpecificGroupbuys"]</Radio>
+                        </ChildContent>
+                        <Feedback>
+                            <ValidationError/>
+                        </Feedback>
                     </RadioGroup>
-
+                    </Validation>
                 </Column>
                 <Column ColumnSize="ColumnSize.Is12">
+                      <EditForm EditContext="editContext">
                     <AntDesign.Select Mode="multiple"
-                                      TItem="GroupBuyDto"
-                                      TItemValue="GroupBuyDto"
+                                      TItem="Guid"
+                                      TItemValue="Guid"
                                       @bind-Values="@SelectedGroupBuy"
                                       Placeholder="@L["SelectaGroupBuys"]"
                                       EnableSearch>
                         <SelectOptions>
                             @foreach (var item in Groupbuys)
                             {
-                                <AntDesign.SelectOption TItemValue="GroupBuyDto" TItem="GroupBuyDto" Value=@item Label=@item.GroupBuyName />
+                                <AntDesign.SelectOption TItemValue="Guid" TItem="Guid" Value=@item.Id Label=@item.GroupBuyName />
                             }
                         </SelectOptions>
                     </AntDesign.Select>
+                                <ValidationMessage For="() => CreateUpdateEarn!.SpecificGroupbuyIds" />
+                    </EditForm>
 
                 </Column>
 
                 <Divider></Divider>
 
                 <Column ColumnSize="ColumnSize.Is12">
+                    <Validation MessageLocalizer="@LH.Localize">
                     <Label>@L["ApplicableforProducts"]</Label>
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="Products">
+                    <RadioGroup Orientation="Orientation.Vertical" @bind-CheckedValue="CreateUpdateEarn.CashbackApplicableProducts" TValue="string" Name="Products">
+                       <ChildContent>
                         <Radio Value="@("AllProducts")">@L["AllProducts"]</Radio>
                         <Radio Value="@("SpecificProducts")">@L["SpecificProducts"]</Radio>
+                   </ChildContent>
+                   <Feedback>
+                  <ValidationError/>
+                  </Feedback>
                     </RadioGroup>
-
+                    </Validation>
                 </Column>
                 <Column ColumnSize="ColumnSize.Is12">
+                     <EditForm EditContext="editContext">
                     <AntDesign.Select Mode="multiple"
-                                      TItem="KeyValueDto"
-                                      TItemValue="KeyValueDto"
+                                      TItem="Guid"
+                                      TItemValue="Guid"
                                       @bind-Values="@SelectedProducts"
                                       Placeholder="@L["SelectaProducts"]"
                                       EnableSearch>
                         <SelectOptions>
                             @foreach (var item in Products)
                             {
-                                <AntDesign.SelectOption TItemValue="KeyValueDto" TItem="KeyValueDto" Value=@item Label=@item.Name />
+                                <AntDesign.SelectOption TItemValue="Guid" TItem="Guid" Value=@item.Id Label=@item.Name />
                             }
                         </SelectOptions>
                     </AntDesign.Select>
-
+                                <ValidationMessage For="() => CreateUpdateEarn!.SpecificProductIds" />
+                            </EditForm>
                 </Column>
 
             </Column>
@@ -194,12 +275,14 @@
         </Row>
     </CardBody>
 </Card>
+</Validations>
+</Form>
 
 <Div Class="text-end">
-    <PikachuButton Class="pk-btn-light" Clicked="NavigateToShoppingCredits">
+    <PikachuButton Class="pk-btn-light" Disabled="IsUpdating" Clicked="NavigateToShoppingCredits">
         @L["Cancel"]
     </PikachuButton>
-    <PikachuButton Class="pk-btn-primary">
+    <PikachuButton Loading="IsUpdating" Clicked="HandleValidSubmit" Class="pk-btn-primary">
         @L["Create"]
     </PikachuButton>
 </Div>
